fix guardian today on firefox and old android. min-height does not work on tables in some browsers

--- a/static/src/stylesheets/email/_front.scss
+++ b/static/src/stylesheets/email/_front.scss
@@ -50,7 +50,7 @@ $container-color: #ffffff;
     padding: 0;
     width: 100%;
     position: relative;
-    min-height: 56px;
+    height: 56px;
 }
 
 .free-text {
@@ -120,7 +120,7 @@ $container-color: #ffffff;
 .byline,
 .trail-text {
     font-weight: normal;
-    padding: 3px $gutter 0;
+    padding: 3px $gutter 5px;
 }
 
 // td
